# Means

./: README.md  README.rst  pyproject.toml  setup.py
aggregationslib/: aggregation.py  aggregations.py  decimalaggregations.py  example.py  purepython.py
aggregationslib/conjuctive/: purepython.py
meanslib/: means.py
tests/: test_aggregations.py  test_decimal_exponential_mean.py
